[package]
name = "molt"
version = "0.3.2"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Embeddable TCL interpreter for Rust applications"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io/"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
indexmap = "1.3.0"
sync-unsafe-cell = "0.1.0"
serde = { version = "1.0.137", features = ["derive"] } 
serde_json = "1.0.86"
rand = "0.8.5"

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]   
opt-level = 3